--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>pr2_web_teleop</name>
+  <name>rws_pr2_teleop</name>
   <version>0.0.0</version>
-  <description>The pr2_web_teleop package</description>
+  <description>The rws_pr2_teleop package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jstn@cs.washington.edu">jstn</maintainer>
+  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
