--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>pr2_teleop</name>
+  <name>rws_pr2_teleop</name>
   <version>0.0.0</version>
-  <description>The pr2_teleop package</description>
+  <description>The rws_pr2_teleop package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jstn@todo.todo">jstn</maintainer>
+  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -46,7 +46,7 @@
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <appname>PR2 teleop</appname>
+    <appname>Teleoperation</appname>
     <!-- You can specify that this package is a metapackage here: -->
     <!-- <metapackage/> -->
 
